--- a/Config/Plugin.settings
+++ b/Config/Plugin.settings
@@ -1,5 +1,6 @@
-<Settings version="v0.4.6">
-	<Plugin version="v1.0.0" engine="v0.4.6" autoload="0"/>
+<Settings>
+	<Plugin autoLoad="1" version="v1.0.0" engine="v0.4.6"/>
 	<Description name="ToolKitNetworking" brief="Template plugin project."/>
 	<Developer name="OtSoftware" web="otyazilim.com" email="info@otyazilim.com"/>
 </Settings>
+
